commit first week report

--- a/报告/jl/基础信息.md
+++ b/报告/jl/基础信息.md
@@ -1,9 +1,10 @@
 # 你最近从事的工作岗位是什么？有接触编程吗？
-
+Java开发
 # 如果有，你最熟悉的编程语言是什么？
-
+Java
 # 你对游戏行业的未来预期好坏 1 到 10 分打几分？
-
+8（经久不衰是肯定的，因国内市场办好和各种文化监管等扣两分
 # 你对游戏客户端开发这个工作的兴趣 1 到 10 分打几分？
-
+8（比crud有趣
 # 你对本实验（产出一个游戏demo）的信心 1 到 10 分打几分？
+10（相信gay电
