--- a/报告/hp/基础信息.md
+++ b/报告/hp/基础信息.md
@@ -1,9 +1,10 @@
 # 你最近从事的工作岗位是什么？有接触编程吗？
-
+计算机维护（就计算机打杂，软件安装，打印机故障，网线制作之类） 近期无
 # 如果有，你最熟悉的编程语言是什么？
-
+python?都忘得差不多了
 # 你对游戏行业的未来预期好坏 1 到 10 分打几分？
-
+8（赚钱预期那是高的，好游戏难）
 # 你对游戏客户端开发这个工作的兴趣 1 到 10 分打几分？
-
+8（初期兴趣是高的，但兴趣这个东西变成工作长久之后都是会有变化的）
 # 你对本实验（产出一个游戏demo）的信心 1 到 10 分打几分？
+9（粗糙而言）
