--- a/报告/ch/基础信息.md
+++ b/报告/ch/基础信息.md
@@ -1,9 +1,14 @@
 # 你最近从事的工作岗位是什么？有接触编程吗？
+自动化工具开发，接触编程
 
 # 如果有，你最熟悉的编程语言是什么？
+python
 
 # 你对游戏行业的未来预期好坏 1 到 10 分打几分？
+10，不打仗的话都是有前景的
 
 # 你对游戏客户端开发这个工作的兴趣 1 到 10 分打几分？
+8，本职工作相关的都挺感兴趣的
 
 # 你对本实验（产出一个游戏demo）的信心 1 到 10 分打几分？
+9
