--- a/报告/fd/基础信息.md
+++ b/报告/fd/基础信息.md
@@ -1,9 +1,14 @@
 # 你最近从事的工作岗位是什么？有接触编程吗？
+测试。5月-7月的一个测试项目有接触Java的二次编程。最近在学习python的测试框架
 
 # 如果有，你最熟悉的编程语言是什么？
+目前接触python多一点
 
 # 你对游戏行业的未来预期好坏 1 到 10 分打几分？
+没接触过不好说，6
 
 # 你对游戏客户端开发这个工作的兴趣 1 到 10 分打几分？
+8
 
 # 你对本实验（产出一个游戏demo）的信心 1 到 10 分打几分？
+10
