--- a/报告/gq/基础信息.md
+++ b/报告/gq/基础信息.md
@@ -1,9 +1,10 @@
 # 你最近从事的工作岗位是什么？有接触编程吗？
-
+上位机开发 
 # 如果有，你最熟悉的编程语言是什么？
-
+c++
 # 你对游戏行业的未来预期好坏 1 到 10 分打几分？
-
+国内7
 # 你对游戏客户端开发这个工作的兴趣 1 到 10 分打几分？
-
+8
 # 你对本实验（产出一个游戏demo）的信心 1 到 10 分打几分？
+10
