--- a/报告/ch/周报告3.md
+++ b/报告/ch/周报告3.md
@@ -1,4 +1,4 @@
-# 你这周遇到的主要问题?
+﻿# 你这周遇到的主要问题?
 刚体跟碰撞啥关系，搞不清楚
 
 # 你如果没解决这个问题，那你觉得应该获得何种帮助
@@ -8,4 +8,4 @@
 没什么变化，我们应该可以把这款游戏做出来
 
 # 你对我有什么建议
-暂无
+暂无()
